service-argo-workflows-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: argo-workflows
    meta.helm.sh/release-namespace: argo
  creationTimestamp: "2024-04-18T17:28:10Z"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.5.5
    helm.sh/chart: argo-workflows-8.0.5
  name: argo-workflows-server
  namespace: argo
  resourceVersion: "75834"
  uid: 339daaef-b99a-4948-a9ab-19f755d93e7f
spec:
  clusterIP: 10.43.141.7
  clusterIPs:
  - 10.43.141.7
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: web
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
