service-envoy-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: eg
    meta.helm.sh/release-namespace: envoy-gateway-system
  creationTimestamp: "2024-04-17T20:17:47Z"
  labels:
    app.kubernetes.io/instance: eg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/version: v1.0.1
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v1.0.1
  name: envoy-gateway
  namespace: envoy-gateway-system
  resourceVersion: "37393"
  uid: 6aad1700-5404-426c-9973-42eba3033ed7
spec:
  clusterIP: 10.43.11.130
  clusterIPs:
  - 10.43.11.130
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 18000
    protocol: TCP
    targetPort: 18000
  - name: ratelimit
    port: 18001
    protocol: TCP
    targetPort: 18001
  selector:
    app.kubernetes.io/instance: eg
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
